--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -42,12 +42,17 @@
         <button id="getToken">Get Token</button>
         <p id="accessToken"></p>
 
+        <!-- STEP 3 HTML  -->
+        <h4>Step 3: Get the calendar events using your access token</h4>
+        <button id="getEvents">Get Events</button>
+        <p id="events"></p>
 
       </main>
 
+    <!-- JAVASCRIPT -->
     <script type="text/javascript">
 
-    // --- STEP 1 JAVASCRIPT 
+        // --- STEP 1 JAVASCRIPT 
       const getCodeElement = document.getElementById("getCode");
       const resultElement = document.getElementById("result");
       const resultLink = document.getElementById("authURL");
@@ -69,7 +74,7 @@
           });
       };
 
-      // --- STEP 2 JAVASCRIPT 
+        // --- STEP 2 JAVASCRIPT 
       const codeValue = document.getElementById("code");
       const getAccessToken = document.getElementById("getToken");
       const accessTokenElement = document.getElementById("accessToken");
@@ -93,6 +98,22 @@
           });
       };
 
+        // --- STEP 3 JAVASCRIPT 
+      const getEvents = document.getElementById("getEvents");
+      const events = document.getElementById("events");
+      const getCalendarEvents = " https://garziurqxg.execute-api.us-east-2.amazonaws.com/dev/api/get-events";
+
+      getEvents.onclick = function () {
+        const { access_token } = JSON.parse(accessTokenElement.innerText);
+        const eventRequest = getCalendarEvents + "/" + access_token;
+        fetch(eventRequest)
+          .then(function (response) {
+            return response.json();
+          })
+          .then(function (json) {
+            events.innerText = JSON.stringify(json, null, 2);
+          });
+      };
     </script>
 
   </body>
